[gd_scene load_steps=10 format=3 uid="uid://cwjr7mdirx3la"]

[ext_resource type="Script" path="res://Scripts/item_orb.gd" id="1_jff3i"]

[sub_resource type="Gradient" id="Gradient_b18dt"]
offsets = PackedFloat32Array(0.186253, 0.700665)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e8n0r"]
gradient = SubResource("Gradient_b18dt")

[sub_resource type="Curve" id="Curve_nd6ri"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.183716, 1), 0.0, 0.0, 0, 0, Vector2(0.995825, 0.113406), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_rdsvs"]
curve = SubResource("Curve_nd6ri")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qmlav"]
resource_local_to_scene = true
angle_max = 360.0
velocity_pivot = Vector3(0, 1, 0)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 1.0
initial_velocity_max = 4.0
angular_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 1.0
radial_accel_max = 5.0
scale_min = 0.1
scale_max = 0.75
scale_curve = SubResource("CurveTexture_rdsvs")
color_initial_ramp = SubResource("GradientTexture1D_e8n0r")
hue_variation_min = -0.2
hue_variation_max = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_est08"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_5ojqj"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_est08")

[sub_resource type="SphereShape3D" id="SphereShape3D_kp3hw"]
radius = 2.0

[node name="ItemOrb" type="Node3D"]
script = ExtResource("1_jff3i")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 500
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_qmlav")
draw_pass_1 = SubResource("QuadMesh_5ojqj")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_kp3hw")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
